fix(comp:desc): use div to wrap header slot

--- a/packages/components/desc/style/index.less
+++ b/packages/components/desc/style/index.less
@@ -1,6 +1,10 @@
 @import '../../style/mixins/reset.less';
 
 .@{desc-prefix} {
+  &-header{
+    width: 100%
+  }
+
   &-item {
     .reset-component();
 
